# rasa-bot

./: pyproject.toml  test.py  test2.py  test_id.txt
mbot/: config.yml  domain.yml
mbot/actions/: actions.py
mbot/data/: nlu.yml  rules.yml  stories.yml
rasa/: .gitignore  config.yml  domain.yml
rasa/actions/: actions.py  parse.py
rasa/data/: nlu.yml  rules.yml  stories.yml
